assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Karla:100,200,300,400,500,600,700|Montserrat:100,200,300,400,500,600,700|Montserrat:100,200,300,400,500,600,700');

/*--------------------------------------------Body*/

.site-wide-alert {
    margin: 0 !important;
    padding: 1 !important;
    margin-left: auto !important;
    margin-right: auto !important;
}

.col{
    margin:0;
    padding:0;
    border:0;
}

body {
    font-family: "Karla", "Montserrat";
}

#menu {
    padding:0;
    font-size: 100%;
    list-style-type: none;
    margin:0;
    text-transform: uppercase;
}

#logo {
    height: 6vh;
    background: url(../logo/alt-mighty-masks-logo.png);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
    margin-bottom:3%;
    margin-top:0%;
}

#menu, #logo {
    line-height: 3.5rem;
}

#menu a:hover {
     color:lightcoral;
}

 nav a {
     text-decoration: none;
     font-size: 0.9rem;
     letter-spacing: 1px;
     color: #777777;
     font-weight: 600;
 }  

hr {
    width: 80%;
    height: 1px;
    margin-right: auto;
    margin-left: auto;
    margin-top: 25px;
    margin-bottom: 25px;
    border-width: 1px;
    border-color: #777777;
    border-style:double;
}

/*--------------------------------------------Hero-Image*/

#hero-image {
    height: 60vh;
    width: 100%;
    background: url(../images/shutterstock/Hero%20Image.jpg) no-repeat center center;
    background-size: cover;
    background-position: center;
}

/*--------------------------------------------Brand-Images*/

.germanfedgovt {
    height: 20vh;

    background: url(../images/unsplash/angelo-abear-RHyJdCu9YbU-unsplash.jpg);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
    border-radius: 50%;
}

.medicare {
    height: 20vh;

    background: url(../images/unsplash/obi-onyeador-T5TojXFNnjk-unsplash.jpg);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
    border-radius: 50%;
}

.nhs {
    height: 20vh;

    background: url(../images/unsplash/edward-howell--GKUjUKOvcQ-unsplash.jpg);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
    border-radius: 50%;
}

.hm {
    height: 20vh;

    background: url(../images/unsplash/sei-kakinoki-hA-ZnkS2Nwc-unsplash.jpg);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
    border-radius: 50%;
}

.zara {
    height: 20vh;

    background: url(../images/unsplash/highlight-id-DbOdCSoefsg-unsplash.jpg);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
    border-radius: 50%;
}

.primark {
    height: 20vh;

    background: url(../images/unsplash/isaac-owens-gAPUrhvVmKs-unsplash.jpg);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
    border-radius: 50%;
}

/*--------------------------------------------Product-Images*/

#medical-masks {
    height: 30vh;

    background: url(../images/shutterstock/Medical%20Masks.jpg);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
}

#N95-masks {
    height: 30vh;

    background: url(../images/shutterstock/Factory%20Worker.jpg);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
}

#fashion-masks {
    height: 30vh;

    background: url(../images/shutterstock/Fashion%20Masks.jpg);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
}

/*--------------------------------------------Order-influx-banner-images*/

.update {
    font-family: "Montserrat";
    font-size: 100%;
    font-weight: 500;
    color: #fff;
    line-height:1.8em;
}

.orderinflux {
    height: 10vh;
    text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
    background: url(../images/unsplash/macau-photo-agency-O8KXb87sTZs-unsplash.jpg); 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
}

/*--------------------------------------------Quotes*/

*/
.quote{
    font-family: "Roboto";
}

.blockquote-custom {
  position: relative;
  font-size: 90%;
}

.blockquote-custom-icon {
  width: 25px;
  height: 25px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: -12.5px;
  left: 25px;
}

/*--------------------------------------------4-MillionMasks-Banner-Image*/

.fourmillionmasks {
    height: 10vh;
    text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
    background: url(../images/unsplash/vera-davidova-YHZIGRwk764-unsplash.jpg); 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
}

.factory {
    height: 30vh;

    background: url(../images/shutterstock/Factory.jpg);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
}

.emergency-workers {
    height: 30vh;

    background: url(../images/shutterstock/Emergency%20Workers.jpg);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
}

.backpacker {
    height: 30vh;

    background: url(../images/shutterstock/Idealised%20Customer.jpg);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
}

.together {
    height: 10vh;

    background: url(../images/unsplash/william-lu-YMgtt_cYT2I-unsplash.jpg);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
}

/*--------------------------------------------Color*/

#call-out {
    font-family: "Montserrat", sans-serif;
    font-size: 80%;
    font-weight: 500;
    color: #f8f8f8;
}

#stay-strong {
    color: #777777;
    font-size: 100%;
    font-weight: 400;
}

/*--------------------------------------------Header*/

header {
    margin: 0;
}

.heading {
    margin-left: 50px;
}

/*--------------------------------------------Footer*/

form {
    display: inline;
    text-align: center;
}

#call-to-action {
    font-family: "Montserrat";
    color: lightcoral;
    font-size: 90%;
    font-weight: 500;

}

footer{
    height: 75px;
}

.social-media i {
        font-size: 80%;
    }

.social-media {
    text-align: center;
}

.social-media li {
    display: inline;
    padding:1%;
}

.social-media i {
    font-size: 140%;
    margin: 1%;
    padding-top: 2%;
    padding-bottom: 2%;
    color: #777777;
    text-align: center;
}

#menu2 {
    color: #777777; 
    font-size: 80%;
    align-items: center;
    list-style-type: none;
    margin:0;
    text-transform:none;
}

#menu2 a:hover {
     color:lightcoral;
}

 #menu2 a {
     text-decoration: none;
     font-size: 0.8rem;
     color: #777777;
     font-weight: 400;
 } 

#logo2 {
    max-width:6em;
    height:2em;
    background: url(../logo/alt-mighty-masks-logo.png);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
}

#logo-copy-shopify {
    color: #777777; 
    font-size: 80%;
    align-items: center;
    list-style-type: none;
    margin:0;
    padding:0;
    text-transform:none;
}

